--- a/exercices.html
+++ b/exercices.html
@@ -7,7 +7,17 @@
 
 
 <body>
-	<a href="index.html"><svg id="rond" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 214 214"><defs><style>.cls-1{fill:#fff;stroke:#d4e03b;stroke-miterlimit:10;stroke-width:17px;}</style></defs><title>rond homepage</title><circle class="cls-1" cx="107" cy="107" r="98.5"/></svg><p>Homepage</p></a>
+	<a href="index.html">
+		<svg id="rond" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 214 214">
+			<defs>
+				<style>
+				.cls-1{fill:#fff;stroke:#d4e03b;stroke-miterlimit:10;stroke-width:17px;}
+				</style>
+			</defs>
+			<title>rond homepage</title>
+			<circle class="cls-1" cx="107" cy="107" r="98.5"/>
+		</svg>
+	</a>
 	
 	<nav><b> 
 		<a class="nav" href="exercices.html" style="background-color:#E4D55C;">Exercices</a>
@@ -29,7 +39,11 @@
 			<a class="htmllinks" href="root_week4/index.html" target="new">Link to week 04 exercice</a> <br> <b><smaller><p class="titlesreadings" >*I didn't save in a new folder the files for week 04 which was supposed to show the progression of my website because I didn't really understood that we would have to post an html page for every week exercices: the "Link to week 04 exercice" is a kind of mix of my work for week 03 and 04. </p></smaller></b>
 		
 		<h3>Week 05</h3> 
-			<p class="titlesreadings">Connect to an external servor.<br> Insert all html pages of the weekly exercices.<br>Use transitions, SVG files, links. Start using JavaScript.</p>
+			<p class="titlesreadings">A/ Connect to an external servor.<br> Insert all html pages of the weekly exercices.<br>Use transitions, SVG files, links. Start using JavaScript.</p>
+			<a class="htmllinks" href="https://camillepoitevin.github.io/dart449_the_language_of_the_web/" target="new">Link to week 05/a exercice</a>
+			<p class="titlesreadings">B/ Create a simple page with 100% absolute positionning or flex, background image and text with multi columns.</p>
+			<a class="htmllinks" href="root_week5 exos/exo05.html" target="new">Link to week 05/b exercice</a>
+			
 		<h3>Week 06</h3> 
 			<p class="titlesreadings"></p>
 		<h3>Week 07</h3> 
