--- a/readings.html
+++ b/readings.html
@@ -32,8 +32,8 @@
 			<p><a class="articlereport" href="images/video report.pdf">Video Report</a></p>
 		
 		<h1>Week 05</h1> 
-			<p class="titlesreadings">Reflection on readings : <br> Nicholas Carr &#8220;Is Google Making Us Stupid?&#8221; <br> Video: &#8220;Are We Digital Dummies&#8221;</p>
-			<p><a class="articlereport" href="images/article report 3.pdf">Article Report 03</a></p>
+			<p class="titlesreadings">Reflection on readings : <br> Nicholas Carr &#8220;Is Google Making Us Stupid?&#8221; <br> </p>
+			<p><a class="articlereport" href="images/Article report 3.pdf">Article Report 03</a></p>
 		
 		<h1>Week 06</h1> 
 			<p class="titlesreadings">Benjamin Wittes &#8220;Databuse: Digital Privacy and the Mosaic&#8221; <br> Alexis Madrigal &#8220;I'm Being Followed&#8221; <br> Video &#8221;The Big Story: War For the Web&#8221; </p> <br>
