--- a/readings.html
+++ b/readings.html
@@ -36,7 +36,8 @@
 			<p><a class="articlereport" href="images/Article report 3.pdf">Article Report 03</a></p>
 		
 		<h1>Week 06</h1> 
-			<p class="titlesreadings">Benjamin Wittes &#8220;Databuse: Digital Privacy and the Mosaic&#8221; <br> Alexis Madrigal &#8220;I'm Being Followed&#8221; <br> Video &#8221;The Big Story: War For the Web&#8221; </p> <br>
+			<p class="titlesreadings">Benjamin Wittes &#8220;Databuse: Digital Privacy and the Mosaic&#8221; <br> Alexis Madrigal &#8220;I'm Being Followed&#8221; </p> <br>
+			<p><a class="articlereport" href="images/Article report 4.pdf">Article Report 04</a></p>
 		
 		<h1>Week 08</h1> 
 			<p class="titlesreadings">Reflection on readings : <br> &#8220;The Rise and Fall of the Open Web&#8221;</p>
