--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
     - Students should also submit thumbnail sketches of their proposed site in jpeg or png format. <br>
     - A moodboard containing examples of typography, color palette, and inspirational images is also required. <br>
     - Finally, the work must be published online.</p>
+		<a href="root_midterm_website/essai.html"><font color="blue"><strong>MIDTERM WEBSITE</strong></font></a>
 		<h1>Final (40%)</h1>
 		<p>Students will develop (alone or in groups of 2-3 maximum) a web site that exemplifies techniques and skills learned throughout the semester.<br>
 
