--- a/root_midterm_website/sketches.html
+++ b/root_midterm_website/sketches.html
@@ -21,7 +21,7 @@
 	
 	<h3><b><font color="black">Conceptual Diagram</font></b></h3><hr>
 	
-	<div class="images"><img src="images/schéma.jpg"></div>
+	<div class="images"><img src="dart449_the_language_of_the_web/root_midterm_website/images/schéma.jpg "></div>
 
 	
 	<div class="textdiagram">
