--- a/root_midterm_website/sketches.html
+++ b/root_midterm_website/sketches.html
@@ -19,7 +19,7 @@
 		<a href="moodboard.html">moodboard</a>
 	</div>
 	
-	<h3><b><font color="black">Conceptual Diagram</font></b></h3><hr>
+	<h3><b><font color="black">Conceptual Diagram</font></b></h3><hr><br>
 	
 	<div class="images"><img src="root_midterm_website/images/schema.jpg"></div>
 	<div class="images"><img src=" dart449_the_language_of_the_web/root_midterm_website/images/schema.jpg "></div>
