--- a/root_midterm_website/sketches.html
+++ b/root_midterm_website/sketches.html
@@ -19,11 +19,8 @@
 		<a href="moodboard.html">moodboard</a>
 	</div>
 	
-	<h3><b><font color="black">Conceptual Diagram</font></b></h3><hr><br>
-	
-	<div class="images"><img src="root_midterm_website/images/schema.jpg"></div>
-	<div class="images"><img src="dart449_the_language_of_the_web/root_midterm_website/images/schema.jpg"></div>
-
+	<h3><b><font color="black">Conceptual Diagram</font></b></h3><hr>
+	<div class="images"><img src="images/schema.jpg"></div>
 	
 	<div class="textdiagram">
 	<font color="deepskyblue"><strong>1.</strong></font><br>CURIOSITY/ Entre dans le monde mystérieux de ce site web. <br> Tu en sortiras changé. <br> Enter in the mysterious world of this website. <br> You will exit changed. <br><br> 
