--- a/root_midterm_website/sketches.html
+++ b/root_midterm_website/sketches.html
@@ -20,7 +20,7 @@
 	</div>
 	
 	<h3><b><font color="black">Conceptual Diagram</font></b></h3><hr>
-	<div class="images"><img src="images/schema.jpg"></div>
+	<div class="images"><img src="images/schema.jpg" height="500px"></div>
 	
 	<div class="textdiagram">
 	<font color="deepskyblue"><strong>1.</strong></font><br>CURIOSITY/ Entre dans le monde mystérieux de ce site web. <br> Tu en sortiras changé. <br> Enter in the mysterious world of this website. <br> You will exit changed. <br><br> 
