--- a/exercices.html
+++ b/exercices.html
@@ -45,11 +45,11 @@
 			<a class="htmllinks" href="root_week5 exos/exo05.html" target="new">Link to week 05/b exercice</a>
 			
 		<h3>Week 06</h3> 
-			<p class="titlesreadings"></p>
+			<p class="titlesreadings">No exercice due</p>
 		<h3>Week 07</h3> 
-			<p class="titlesreadings"></p>
+			<p class="titlesreadings">Midterm due -> go to "projects" page</p>
 		<h3>Week 08</h3> 
-			<p class="titlesreadings"></p>
+			<p class="titlesreadings">Create a flex box 100%, centered + 10 boxes below with specific positioning, and same space between each of them.</p>
 		<h3>Week 09</h3> 
 			<p class="titlesreadings"></p>
 	</article>
