--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,7 @@
 	</b></nav>
 	<article>
 		<h1>Project 01 (10%)</h1>
-		<p>Using HTML5 and css, students will create there own personal web site for the course. It must contain well structured assets, semantic tags and organizational conventions. Sections should be organized around readings, exercises and projects.</p>
-		<p> you are navigating on it !</p>
+		<p>Using HTML5 and css, students will create there own personal web site for the course. It must contain well structured assets, semantic tags and organizational conventions. Sections should be organized around readings, exercises and projects. You are navigating on it!</p>
 		
 		<h1>Midterm (20%)</h1>
 		<p>Students must submit a well designed and organized proposal for their final project. <br>
