--- a/exercices.html
+++ b/exercices.html
@@ -47,9 +47,10 @@
 		<h3>Week 06</h3> 
 			<p class="titlesreadings">No exercice due</p>
 		<h3>Week 07</h3> 
-			<p class="titlesreadings">Midterm due -> go to "projects" page</p>
+			<p class="titlesreadings">Midterm due - go to "PROJECTS" page</p>
 		<h3>Week 08</h3> 
 			<p class="titlesreadings">Create a flex box 100%, centered + 10 boxes below with specific positioning, and same space between each of them.</p>
+		<a class="htmllinks" href="root_week8 exos/exo08.html" target="new">Link to week 08 exercice</a>
 		<h3>Week 09</h3> 
 			<p class="titlesreadings"></p>
 	</article>
