--- a/exercices.html
+++ b/exercices.html
@@ -53,6 +53,7 @@
 		<a class="htmllinks" href="root_week8 exos/exo08.html" target="new">Link to week 08 exercice</a>
 		<h3>Week 09</h3> 
 			<p class="titlesreadings"></p>
+		<a class="htmllinks" href="root_week9 exos/exo09.html" target="new">Link to week 09 exercice</a>
 	</article>
 	
 
