--- a/readings.html
+++ b/readings.html
@@ -41,6 +41,7 @@
 		
 		<h1>Week 08</h1> 
 			<p class="titlesreadings">Reflection on readings : <br> &#8220;The Rise and Fall of the Open Web&#8221;</p>
+			<p><a class="articlereport" href="images/Article report 5.pdf">Article Report 05</a></p>
 		
 		<h1>Week 09</h1> 
 			<p class="titlesreadings">Reflection on readings : <br> &#8220;Net Neutrality&#8221; </p> <br>
