--- a/exercices.html
+++ b/exercices.html
@@ -52,7 +52,7 @@
 			<p class="titlesreadings">Create a flex box 100%, centered + 10 boxes below with specific positioning, and same space between each of them.</p>
 		<a class="htmllinks" href="root_week8/index.html" target="new">Link to week 08 exercice</a>
 		<h3>Week 09</h3> 
-			<p class="titlesreadings"></p>
+			<p class="titlesreadings">Use box-shadow, text-shadow, transitions, animations.</p>
 		<a class="htmllinks" href="root_week9/index.html" target="new">Link to week 09 exercice</a>
 	</article>
 	
