--- a/exercices.html
+++ b/exercices.html
@@ -54,6 +54,9 @@
 		<h3>Week 09</h3> 
 			<p class="titlesreadings">Use box-shadow, text-shadow, transitions, animations.</p>
 		<a class="htmllinks" href="root_week9/index.html" target="new">Link to week 09 exercice</a>
+		<h3>Week 10</h3> 
+			<p class="titlesreadings">Use media queries and responsive design. Insert a full screen video. Try Javascript with AOS (animate on scroll) and Rellax, and more if possible.</p>
+			<a class="htmllinks" href="root_week10/index.html" target="new">Link to week 10 exercice</a>
 	</article>
 	
 
