--- a/root_week10/index.html
+++ b/root_week10/index.html
@@ -13,21 +13,21 @@
 
 <section id="video">
 	<video autoplay loop muted posted="images/photo.png" id="foot"><source src="images/walking_on_stripes.mp4" type="video/mp4"></video>
-	<h id="title">VIDEO</h>
+	<h1 id="title">VIDEO</h1>
 </section>
 	
 <section id="text">
 	<div class="one">
-		<h>WOOP</h>
+		<h1>WOOP</h1>
 	</div>
 	<div class="two">
-		<h>WOOP</h>
+		<h1>WOOP</h1>
 	</div>
 	<div class="three">
-		<h>WOOP</h>
+		<h1>WOOP</h1>
 	</div>
 	<div class="four">
-		<h>WOOP</h>
+		<h1>WOOP</h1>
 	</div>
 </section>
 
