--- a/root_week10/index.html
+++ b/root_week10/index.html
@@ -8,6 +8,8 @@
 <title>exercice week10</title>
 </head>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.css">
+
 
 <body>
 
@@ -17,7 +19,7 @@
 </section>
 	
 <section id="text">
-	<div class="one">
+	<div class="one" data-aos="zoom-in">
 		<h1>WOOP</h1>
 	</div>
 	<div class="two">
@@ -30,6 +32,11 @@
 		<h1>WOOP</h1>
 	</div>
 </section>
-
+<script src="https://cdn.rawgit.com/michalsnik/aos/2.0.4/dist/aos.js"></script>
+<script>
+	AOS.init({
+  duration: 1200,
+})
+	</script>
 </body>
 </html>
