--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,8 @@
     - It must show the realization of the idea (what does it mean?)<br>
     - It must be published online.
 </p>
+		 <a href="root_finalwebsite/index.html"><font color="blue"><strong>FINAL WEBSITE</strong></font></a>
+		
 	</article>
 	<footer>DART 449 - The Language of te Web. <br> 2017 - Camille Poitevin, 40004676 - camille.poitevin@hotmail.fr</footer>
 </body>
