--- a/root_finalwebsite/10alerte.html
+++ b/root_finalwebsite/10alerte.html
@@ -15,7 +15,7 @@
 		<div id="alertBg">
 			
 			<img id="warning" src="images/warning.png">
-			<p id="dialogText">Quiiter cette page immédiatement<br>ou votre ordinateur sera fortement<br>contaminé!</p>
+			<p id="dialogText">Quitter cette page immédiatement<br>ou votre ordinateur sera fortement<br>contaminé!</p>
 			<div id="alertHeader">
 				<span id="alertTitle">Attention - Virus Détécté</span>
 				<span id="closeBtn">x</span>
